# agentguardp

./: .gitignore  LICENSE  PKG-INFO  README.md  action.yml  data_crawler.py  ds_eval.py  pyproject.toml  run_ds_eval.py
.github/workflows/: agentguard.yml
agentguard/: __init__.py  cli.py  config.py  desktop.py  gui.py  license_gen.py  license_public.pem  license_verify.py  pipeline.py
agentguard/reporter/: __init__.py  reporter.py
agentguard/rules/: __init__.py  js_rules.py  python_rules.py
agentguard/scanner/: bandit_adapter.py  code_scanner.py  llm_heuristic.py  llm_review.py  ml_filter.py
agentguard/xhls_security/: __init__.py  security_hardening.py  semantic_gate.py
agentguard2027.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: README.md
docs/eval/: phase-0-1-20260620.json  phase-0-1-report-20260620.md  phase-0-baseline.md
docs/marketing/: 01-positioning.md  02-landing-copy.md  04-pricing.md  05-ph-launch-kit.md
docs/spec/: 03-llm-heuristic-spec.md
fixer/: __init__.py  code_fixer.py
fixer/fixtures/: findings.json  sample_bad.py  sample_test.py
